--- a/role_gpu/tasks/main.yml
+++ b/role_gpu/tasks/main.yml
@@ -46,21 +46,69 @@
 
 - name: Set fact for GPU info
   set_fact:
-      gpu_type: "{{ nvidia_smi | json_query(gpu_type_query) }}"
-      gpu_mem_usage: "{{ nvidia_smi | json_query(gpu_mem_usage_query)}}"
-      gpu_freq: "{{ nvidia_smi | json_query(gpu_freq_query)}}"
-      gpu_temp: "{{ nvidia_smi | json_query(gpu_temp_query)}}"
-      gpu_util: "{{ nvidia_smi | json_query(gpu_util_query) }}"
+      gpu_type: "{{ [ nvidia_smi | json_query(gpu_type_query) ] | flatten }}"
+      gpu_mem_usage: "{{ [ nvidia_smi | json_query(gpu_mem_usage_query)] | flatten }}"
+      gpu_freq: "{{ [ nvidia_smi | json_query(gpu_freq_query) ] | flatten }}"
+      gpu_temp: "{{ [ nvidia_smi | json_query(gpu_temp_query) ] | flatten }}"
+      gpu_util: "{{ [ nvidia_smi | json_query(gpu_util_query) ] | flatten }}"
+      gpu_processes: "{{ [ nvidia_smi | json_query(gpu_processes_query) ] | flatten }}"
       nvidia_driver: "{{ nvidia_driver.stdout }}"
       cuda_versions: "{{ cuda_versions.stdout | replace('-', '.') | split('\n') }}"
       cudnn_versions: "{{ cudnn_versions.stdout | replace('-', '.') | split('\n') }}"
       cacheable: "yes"
   vars:
-      gpu_type_query: "{{ 'product_name' if (nvidia_smi | type_debug == 'dict') else '[*].product_name' }}"
-      gpu_mem_usage_query: "{{ 'fb_memory_usage' if (nvidia_smi | type_debug == 'dict') else '[*].fb_memory_usage' }}"
-      gpu_freq_query: "{{ 'clocks' if (nvidia_smi | type_debug == 'dict') else '[*].clocks' }}"
-      gpu_temp_query: "{{ 'temperature.gpu_temp' if (nvidia_smi | type_debug == 'dict') else '[*].temperature.gpu_temp' }}"
-      gpu_util_query: "{{ 'utilization' if (nvidia_smi | type_debug == 'dict') else '[*].utilization' }}"
+      gpu_type_query: "product_name || [*].product_name"
+      gpu_mem_usage_query: "fb_memory_usage || [*].fb_memory_usage"
+      gpu_freq_query: "clocks || [*].clocks"
+      gpu_temp_query: "temperature.gpu_temp || [*].temperature.gpu_temp"
+      gpu_util_query: "utilization || [*].utilization"
+      gpu_processes_query: "processes || [*].processes"
+
+- set_fact:
+      gpu_proc_ids: "{{ (gpu_processes | json_query('[*].process_info.pid || [*][*].process_info.pid') | flatten) if gpu_processes | length > 0 else [] }}"
+
+# https://man7.org/linux/man-pages/man1/ps.1.html
+# AIX FORMAT DESCRIPTORS:
+#   This ps supports AIX format descriptors, which work somewhat like
+#   the formatting codes of printf(1) and printf(3).  For example,
+#   the normal default output can be produced with this: ps -eo "%p
+#   %y %x %c".  The NORMAL codes are described in the next section.
+#   CODE   NORMAL   HEADER
+#   %C     pcpu     %CPU
+#   %G     group    GROUP
+#   %P     ppid     PPID
+#   %U     user     USER
+#   %a     args     COMMAND
+#   %c     comm     COMMAND
+#   %g     rgroup   RGROUP
+#   %n     nice     NI
+#   %p     pid      PID
+#   %r     pgid     PGID
+#   %t     etime    ELAPSED
+#   %u     ruser    RUSER
+#   %x     time     TIME
+#   %y     tty      TTY
+#   %z     vsz      VSZ
+
+- name: Grab processes' information from process ids
+  shell:
+      cmd: ps --no-headers -p "{{ item }}" -o "%U," -o lstart -o ",%t,%a"
+  environment:
+      PATH: "{{ env_path }}"
+  args:
+      executable: /bin/zsh
+  with_items: "{{ gpu_proc_ids }}"
+  register: process_info
+  changed_when: False
+  failed_when: False
+
+- set_fact:
+      process_info_dict: "{{ _dict }}"
+  vars:
+      _result: "{{ dict(process_info.results | json_query('[?rc == `0`].[item, stdout]')) }}"
+      _proc_id: "{{ _result.keys() | list }}"
+      _proc_info: "{{ _result.values() }}"
+      _dict: "{{ dict(_proc_id|zip(_proc_info)) }}"
 
 - name: Output Lab Machine Statuses html file
   template:
