finally finished building an interactive web page for the lab statuses

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "*.yml": "ansible",
         "*.yaml": "ansible",
         "*.j2": "ansible-jinja"
-    }
+    },
+    "prettier.printWidth": 110,
 }
