--- a/main-playbook.yml
+++ b/main-playbook.yml
@@ -1,7 +1,7 @@
 ---
 # main playbook
 - name: Main playbook for managing all servers
-  hosts: all
+  hosts: labservers
   vars_files:
       - vars/main.yml
       - vars/secrets.yml
