--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,6 @@
 user_choice: "admin"
-ansible_user: "{{ _admin_username if user_choice == 'admin' else _ansbl_username }}"
+ansible_ssh_user: "{{ _admin_username if user_choice == 'admin' else _ansbl_username }}"
+ansible_ssh_pass: "{{ _admin_password if user_choice == 'admin' else _ansbl_password }}"
 ansible_become_password: "{{ _admin_password if user_choice == 'admin' else _ansbl_password }}"
 is_reboot: False
 is_update_upgrade: False
