--- a/role_apt/tasks/main.yml
+++ b/role_apt/tasks/main.yml
@@ -1,6 +1,13 @@
 ---
 # tasks file for role_apt
 
+- name: Fix-broken installs in-case something need to be fixed before update upgrade
+  become: True
+  shell:
+    cmd: sudo apt --fix-broken install
+  changed_when: False
+  failed_when: False
+
 - name: Apt-get update and upgrade
   become: yes
   apt:
