--- a/role_reboot/tasks/main.yml
+++ b/role_reboot/tasks/main.yml
@@ -21,25 +21,19 @@
 
 - set_fact:
       user_process_dict: "{{ dict(_user|zip(_processes)) }}"
-  # vars:
-      # result: "{{ dict(processes.results | json_query('[?rc == `0`].[item, stdout]')) }}"
-      # _user: "{{ result.keys() | list | difference(groups['lab_internal_web_host']) }}"
-      # _processes: "{{ result.values() | map('split', '\n') | list }}"
-      # _dict: "{{  }}"
 
 - debug: msg="{{ user_process_dict }}"
 
-- debug: msg="{{ _user }}"
-
-# - name: Reboot block
-#   block:
-#     - name: Reboot only machines that no one is running anything
-#       become: yes
-#       reboot:
-#           msg: "Reboot initiated by Ansible"
-#           connect_timeout: 5
-#           reboot_timeout: 300
-#           pre_reboot_delay: 0
-#           post_reboot_delay: 60
-#           test_command: uptime
-#   when: user_process_dict.keys() | length == 0
+- name: Reboot block
+  block:
+    - name: Reboot only machines that no one is running anything
+      hosts: labservers, !lab_internal_web_host
+      become: yes
+      reboot:
+          msg: "Reboot initiated by Ansible"
+          connect_timeout: 5
+          reboot_timeout: 300
+          pre_reboot_delay: 0
+          post_reboot_delay: 60
+          test_command: uptime
+  when: user_process_dict.keys() | length == 0
