--- a/role_gpu/tasks/main.yml
+++ b/role_gpu/tasks/main.yml
@@ -51,7 +51,7 @@
     gpu_freq: "{{ [ nvidia_smi | json_query(gpu_freq_query) ] | flatten }}"
     gpu_temp: "{{ [ nvidia_smi | json_query(gpu_temp_query) ] | flatten }}"
     gpu_util: "{{ [ nvidia_smi | json_query(gpu_util_query) ] | flatten }}"
-    gpu_processes: "{{ [ nvidia_smi | json_query(gpu_processes_query) ] | flatten }}"
+    gpu_processes: "{{ [ nvidia_smi | json_query(gpu_processes_query) ] | flatten | list }}"
     nvidia_driver: "{{ nvidia_driver.stdout }}"
     cuda_versions: "{{ cuda_versions.stdout | replace('-', '.') | split('\n') }}"
     cudnn_versions: "{{ cudnn_versions.stdout | replace('-', '.') | split('\n') }}"
@@ -65,7 +65,10 @@
     gpu_processes_query: "processes || [*].processes"
 
 - set_fact:
-    gpu_proc_ids: "{{ gpu_processes | json_query('[*].process_info[*].pid') }}"
+    gpu_proc_ids: "{{ gpu_processes | json_query('[*].process_info[*].pid || [*].process_info.pid') }}"
+
+- debug:
+    var: gpu_proc_ids
 
 # https://man7.org/linux/man-pages/man1/ps.1.html
 # AIX FORMAT DESCRIPTORS:
@@ -208,7 +211,7 @@
   - name: Run `npm run start` to start the webpage at port 3000
     become: True
     shell:
-      cmd: nohup npm run start >> /dev/null 2>&1 &
+      cmd: nohup npm run start &
       chdir: /internal_web
     delegate_to: "{{ groups['lab_internal_web_host'][0] }}"
     run_once: True
