fixes some bugs with role_apt and update apt packages list + pip packages list

--- a/role_apt/defaults/main.yml
+++ b/role_apt/defaults/main.yml
@@ -5,6 +5,7 @@ default_apt_packages:
   - make
   - automake
   - vim
+  - neovim
   - git
   - gcc
   - g++
@@ -24,5 +25,6 @@ default_apt_packages:
   - libtiff-dev
   - libjpeg-dev
   - libcairo2-dev
+  - protobuf-compiler
 
 additional_apt_packages: []
